--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Gabriela);
 
 html, body {
-  height: 100%;
-  min-height: 100%;
+  height: 80%;
+  min-height: 80%;
 }
 
 body {
@@ -10,7 +10,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 100%;
+  font-size: 80%;
 }
 
 .wrapper {
@@ -20,13 +20,13 @@ body {
 }
 
 #content {
-  padding: 20px;
-  background: rgba(255,255,255,.85);
+  padding: 15px;
+  background: rgba(76, 223, 245, 0.85);
 }
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: #fff;
+  color: #f60707;
 }
 
 h1 {
@@ -46,8 +46,8 @@ h3 {
 }
 
 img {
-  max-width: 100%;
-  width: 100%;
+  max-width: 80%;
+  width: 80%;
   height: auto;
 }
 
@@ -56,7 +56,7 @@ p {
 }
 
 a {
-  color: black;
+  color: rgb(63, 12, 230);
   text-decoration: none;
 }
 
@@ -66,7 +66,7 @@ a:hover {
 
 @media only screen and (max-width: 1042px) {
   .wrapper {
-    width: 80%;
+    width: 100%;
   }
 }
 
